--- a/intro.html
+++ b/intro.html
@@ -1,16 +1,16 @@
 <html>
-  
+  <meta name:"viewport" content="width=divide-width, initial-scale:1.0">
   <head>
     <title>我是黃祈禎</title>
     <style>
-      .content{
+      .content-box{
             width:70%;
         }
     </style>
   </head>
   
   <body>
-    <div class="content">
+    <div class="content-box">
       <h3>個人簡介</h3>
       <p>我是祈禎，目前30歲，大學畢業於龍華多媒體設計系。<br/>
          畢業後都是從事平面設計，因緣際會下在疫情中公司為了推廣線上而轉任學習網頁設計技能。都是用套版工具，所以在設計過程無法將理想中的網頁完整的表達出來，每次都只能請出Google大神，東拼西湊來自我學習HTML+Css。
