--- a/intro.html
+++ b/intro.html
@@ -6,6 +6,7 @@
       .content-box{
             width:70%;
             display:block;
+            text-align:center;
         }
     </style>
   </head>
