--- a/intro.html
+++ b/intro.html
@@ -5,10 +5,10 @@
     <style>
       .frame{
             display:flex;
+            align-item:center;
         }
       .content-box{
             flex:auto;
-            width:80%;
       }
     </style>
   </head>
