--- a/intro.html
+++ b/intro.html
@@ -9,7 +9,7 @@
         }
       .content-box{
             flex:auto;
-            width:80%;
+            width:700px;
       }
     </style>
   </head>
