--- a/intro.html
+++ b/intro.html
@@ -17,15 +17,17 @@
   <body>
     <div class="frame">
       <div class="content-box">
-        <h3>個人簡介</h3>
-            <p>我是祈禎，目前30歲，大學畢業於龍華多媒體設計系。<br/>
+            <h3>個人簡介</h3>
+            <p>
+                我是祈禎，目前30歲，大學畢業於龍華多媒體設計系。<br/>
                 畢業後都是從事平面設計，因緣際會下在疫情中公司為了推廣線上而轉任學習網頁設計技能。都是用套版工具，
-                所以在設計過程無法將理想中的網頁完整的表達出來，每次都只能請出Google大神，東拼西湊來自我學習HTML+Css。
-                <br/>29歲離職後因想要學習更多有關於網站開發設計的工作相關內容，轉職到一企業任職PM/SA。
-                透過專案規劃了解到一個網頁、APP，需透過設計、前、後端工程師。並在過程中不斷的測試、修改、優化。
-                <br/>透過一路上的自我學習與實際碰到專案開發管理，我希望自己可以把握這個成長轉變的機會。
-                希望透過一系列高強度學習讓自己對未來想轉職前端的路不在迷惘並更穩固自己的技術。</p>
-      </div>
+                所以在設計過程無法將理想中的網頁完整的表達出來，每次都只能請出Google大神，東拼西湊來自我學習HTML+Css。<br/>
+                29歲離職後因想要學習更多有關於網站開發設計的工作相關內容，轉職到一企業任職PM/SA。
+                透過專案規劃了解到一個網頁、APP，需透過設計、前、後端工程師。並在過程中不斷的測試、修改、優化。<br/>
+                透過一路上的自我學習與實際碰到專案開發管理，我希望自己可以把握這個成長轉變的機會。
+                希望透過一系列高強度學習讓自己對未來想轉職前端的路不在迷惘並更穩固自己的技術。
+            </p>
+        </div>
       </div>
   </body>
   
