--- a/intro.html
+++ b/intro.html
@@ -5,7 +5,7 @@
     <style>
       .frame{
             display:flex;
-            align-item:center;
+            align-items:center;
         }
       .content-box{
             flex:auto;
