--- a/intro.html
+++ b/intro.html
@@ -4,12 +4,11 @@
     <title>我是黃祈禎</title>
     <style>
       .frame{
-            display:flex;
             align-items:center;
         }
       .content-box{
-            flex:auto;
-            width:700px;
+            display:block;
+            width:70%;
       }
     </style>
   </head>
