--- a/intro.html
+++ b/intro.html
@@ -4,11 +4,13 @@
     <title>我是黃祈禎</title>
     <style>
       .frame{
-            align-items:center;
+          display:flex;  
+          align-items:center;
         }
       .content-box{
-            display:block;
-            width:70%;
+          flex:none;
+          width:70%;
+          justify-content:center;
       }
     </style>
   </head>
