--- a/intro.html
+++ b/intro.html
@@ -11,6 +11,7 @@
           flex:none;
           width:70%;
           justify-content:center;
+        align-items:center;
       }
     </style>
   </head>
