--- a/intro.html
+++ b/intro.html
@@ -11,6 +11,7 @@
       .content-box{
           flex:none;
           width:70%;
+          justify-content:center;
       }
     </style>
   </head>
