--- a/intro.html
+++ b/intro.html
@@ -13,6 +13,9 @@
           width:70%;
           justify-content:center;
       }
+      h3{
+        color:#A259FF;
+      }
     </style>
   </head>
   
