--- a/intro.html
+++ b/intro.html
@@ -20,6 +20,7 @@
   </head>
   
   <body>
+    <div>
     <div class="frame">
       <div class="content-box">
             <h3>個人簡介</h3>
@@ -61,6 +62,7 @@
            </div>
             <hr>
       </div>
+    </div>
   </body>
   
 </html>
