--- a/intro.html
+++ b/intro.html
@@ -10,14 +10,14 @@
         }
       .content-box{
           flex:none;
-          width:70%;
+          width:auto;
           justify-content:center;
       }
       h3{
         color:#A259FF;
       }
     </style>
-  </head>
+    </head>
   
   <body>
     <div>
