--- a/intro.html
+++ b/intro.html
@@ -9,12 +9,16 @@
           justify-content:center;
         }
       .content-box{
-         
-          width:auto;
+          width:70%;
           justify-content:center;
       }
       h3{
         color:#A259FF;
+        font-weight: bold;
+        text-align: left;
+      }
+      p{
+         text-align: left;
       }
     </style>
     </head>
