--- a/intro.html
+++ b/intro.html
@@ -9,8 +9,8 @@
           justify-content:center;
         }
       .content-box{
-          width:70%;
-          justify-content:center;
+        flex:none;  
+        width:70%;
       }
       h3{
         color:#A259FF;
