--- a/intro.html
+++ b/intro.html
@@ -4,7 +4,8 @@
     <title>我是黃祈禎</title>
     <style>
       .frame{
-          display:flex;  
+          display:flex;
+          flex-wrap:wrap;
           align-items:center;
           justify-content:center;
         }
