--- a/intro.html
+++ b/intro.html
@@ -38,8 +38,8 @@
                 希望透過一系列高強度學習讓自己對未來想轉職前端的路不在迷惘並更穩固自己的技術。
             </p>
         </div>
-      </div>  
       <hr>
+      
         <div class="content-box">
             <h3>為了成為軟體工程師，曾做過什麼努力？若有具體專案作品請分享給我們。</h3>
             <p>
@@ -48,8 +48,9 @@
             </p>
          </div>
          <hr>
+      
          <div class="content-box">
-            <h3>* 如果參與這個計畫，會怎麼安排學習時間？</h3>
+            <h3>如果參與這個計畫，會怎麼安排學習時間？</h3>
             <p>
                 因為家裡有經濟需需要維持，所以會以邊就業邊努力自我學習。
               <ul>  
