--- a/intro.html
+++ b/intro.html
@@ -21,6 +21,9 @@
       p{
          text-align: left;
       }
+      hr{
+         margin-bottom:30px;
+      }
     </style>
     </head>
   
@@ -54,7 +57,7 @@
          <div class="content-box">
             <h3>如果參與這個計畫，會怎麼安排學習時間？</h3>
             <p>
-                因為家裡有經濟需需要維持，所以會以邊就業邊努力自我學習。
+                目前仍在職，需要維持家中經濟，初期會以一邊就業、一邊努力自我學習。
               <ul>  
                 <li>通勤時間學習0.5-1h</li>
                 <li>午休中午 0.5-1/h</li>
