--- a/intro.html
+++ b/intro.html
@@ -22,7 +22,7 @@
          text-align: left;
       }
       hr{
-         margin-bottom:30px;
+         margin-top:30px;
       }
     </style>
     </head>
