--- a/intro.html
+++ b/intro.html
@@ -14,6 +14,7 @@
         width:70%;
       }
       h3{
+        font-size:24px;
         color:#A259FF;
         font-weight: bold;
         text-align: left;
@@ -106,7 +107,7 @@
             <h3>其他想要對我們說的事情？</h3>
             <p>
                很謝謝彭彭老師在Youotube開課程並建立Wehelp的活動，我知道自己可能在條件上不是很符合老師的需求。但還是很謝謝願意閱讀這些資訊的老師以及助教～
-              (P.S. 很抱歉第一次送出申請時沒有將網站附上，所以重新填寫了一次。謝謝各位老師)
+              (P.S. 很抱歉第一次送出申請時沒有將 GitHub 的Url附上，所以重新填寫了一次。謝謝各位老師)
             </p>
           </div>
           
