--- a/intro.html
+++ b/intro.html
@@ -50,7 +50,7 @@
           <h3>為了成為軟體工程師，曾做過什麼努力？若有具體專案作品請分享給我們。</h3>
             <p>
                 在自主學習的部分目前透過彭彭老師的YouTube 影片學習前端基礎並搭配W3school學習（HTML、CSS、JavaScript ）初步網頁切版。<br/>
-                目前任職的工作也可以機會練習基礎切版。也使用 Webflow 網站建立簡易網站 <a style="color:red; font-weight=bold;" hrf="https://chi-chens-portfolio.webflow.io/">點我看網頁</a>
+                目前任職的工作也可以機會練習基礎切版。也使用 Webflow 網站建立簡易網站 <a style="color:red; font-weight=bold;" href="https://chi-chens-portfolio.webflow.io/">點我看網頁</a>
             </p>
         </div>
          
