--- a/intro.html
+++ b/intro.html
@@ -59,13 +59,12 @@
             <hr>
             <h3>如果參與這個計畫，會怎麼安排學習時間？</h3>
             <p>
-                目前仍在職，需要維持家中經濟，初期會以一邊就業、一邊努力自我學習。
-              <ul>  
-                <li>通勤時間學習0.5-1h</li>
-                <li>午休中午 0.5-1/h</li>
-                <li>晚上 4-5/h</li>
-                <li>假日可以進行8-10h的學習。</li>
-              </ul>
+                目前仍在職，需要維持家中經濟，確定可以參與活動後會全新專心專職學習。
+                
+                <h4>第一階段</h4>｜
+                
+                <h4>第二階段</h4>｜
+                每日維持6-8小時學習。並搭配其他學習資料加強訓練
                 未來學習到更進階的課程，會依照實際情況半工半讀將課程學習完成。
             </p>
           </div>
