--- a/intro.html
+++ b/intro.html
@@ -1,7 +1,7 @@
 <html>
   <meta name:"viewport" content="width=divide-width, initial-scale:1.0">
   <head>
-    <title>我是黃祈禎</title>
+    <title> WeHelp 申請表-黃祈禎</title>
     <style>
       .frame{
           display:flex;
@@ -26,7 +26,9 @@
       hr{
          margin-bottom:50px;
       }
-      body{
+      h1{
+        text-align:center;
+        margin-bottom:50px;
       }
     </style>
     </head>
@@ -34,9 +36,10 @@
   <body>
     <div class="frame">
       <div class="content-box">
+        <h1> WeHelp 第四屆申請表 </h1>
             <h3>個人簡介</h3>
             <p>
-                我是祈禎，目前30歲，大學畢業於龍華多媒體設計系。<br/>
+                我是黃祈禎，目前30歲，大學畢業於龍華多媒體設計系。<br/>
                 畢業後都是從事平面設計，因緣際會下在疫情中公司為了推廣線上而轉任學習網頁設計技能。都是用套版工具，
                 在設計過程無法將理想中的網頁完整的表達出來，每次都請出Google大神，東拼西湊來自我學習HTML+Css。<br/>
                 29歲離職後因想要學習更多有關於網站開發設計的工作相關內容，轉職到一企業任職PM/SA。
