--- a/intro.html
+++ b/intro.html
@@ -14,6 +14,7 @@
         width:70%;
       }
       h3{
+        padding:30px;
         font-size:24px;
         color:#ffffff;
         font-weight: bold;
