--- a/intro.html
+++ b/intro.html
@@ -14,7 +14,7 @@
         width:70%;
       }
       h3{
-        padding:30px;
+        padding:30px 10px;
         font-size:24px;
         color:#ffffff;
         font-weight: bold;
@@ -31,8 +31,8 @@
         text-align:center;
         margin-bottom:50px;
       }
-      backgroung{
-        background-img:url('https://drive.google.com/file/d/1fDjMn6bez-bkjL-GIhLqYQUSslUeTwQH/view?usp=sharing');
+      body{
+        background-img:url('');
       }
     </style>
     </head>
