--- a/intro.html
+++ b/intro.html
@@ -32,7 +32,7 @@
         margin-bottom:50px;
       }
       body{
-        background-img:url('');
+        background-img:url("CD57693E-8811-4B98-B182-942CB1FC3975_1_105_c.jpeg");
       }
     </style>
     </head>
