--- a/intro.html
+++ b/intro.html
@@ -34,6 +34,11 @@
       body{
         background-img:url("https://github.com/macy1215/resume/blob/8837e515ad359e7f44bde545cfe56b7c0377c182/CD57693E-8811-4B98-B182-942CB1FC3975_1_105_c.jpeg");
       }
+      
+      @media (max-width:500px){
+      .content-box{  
+        width:90%;}
+      }
     </style>
     </head>
   
