--- a/intro.html
+++ b/intro.html
@@ -14,7 +14,7 @@
         width:70%;
       }
       h3{
-        padding:30px 10px;
+        padding:12px 8px;
         font-size:24px;
         color:#ffffff;
         font-weight: bold;
@@ -23,6 +23,7 @@
       }
       p{
          text-align: left;
+         line-heigh:140%;
       }
       hr{
          margin-bottom:50px;
@@ -32,6 +33,7 @@
         margin-bottom:50px;
       }
       body{
+        background-repeat: no-repeat;
         background-img:url("https://github.com/macy1215/resume/blob/8837e515ad359e7f44bde545cfe56b7c0377c182/CD57693E-8811-4B98-B182-942CB1FC3975_1_105_c.jpeg");
       }
       
