--- a/intro.html
+++ b/intro.html
@@ -35,7 +35,7 @@
       body{
         background-repeat: no-repeat;
         background-position: center center;
-        background-image:url("https://github.com/macy1215/resume/blob/8837e515ad359e7f44bde545cfe56b7c0377c182/CD57693E-8811-4B98-B182-942CB1FC3975_1_105_c.jpeg");
+        background-image:url("CD57693E-8811-4B98-B182-942CB1FC3975_1_105_c.jpeg");
       }
       
       @media (max-width:1250px) {
