--- a/intro.html
+++ b/intro.html
@@ -2,7 +2,7 @@
   <meta name:"viewport" content="width=divide-width, initial-scale:1.0">
   <head>
     <title> WeHelp 申請表-黃祈禎</title>
-    <link rel="stylesheet" type="text/css" href="https://github.com/macy1215/resume/blob/a1369fb3b8c210b48b694340020650ea5de3f5ad/intro.css">
+    <link rel="stylesheet" type="text/css" href="intro.css">
   </head>
   
   <body>
