--- a/intro.html
+++ b/intro.html
@@ -1,6 +1,7 @@
 <html>
-  <meta name:"viewport" content="width=divide-width, initial-scale:1.0">
   <head>
+    <meta name:"viewport" content="width=divide-width, initial-scale=1.0"/>
+    <meta charset="utf-8">
     <title> WeHelp 申請表-黃祈禎</title>
     <link rel="stylesheet" type="text/css" href="intro.css">
   </head>
