--- a/intro.html
+++ b/intro.html
@@ -97,6 +97,9 @@
             </p>
           </div>
           
+          <div class="footer">
+            Made By Chi-Chen.Huang
+          </div>
       </div>
   </body>
   
