--- a/intro.html
+++ b/intro.html
@@ -30,9 +30,9 @@
           <hr>  
           <h3>為了成為軟體工程師，曾做過什麼努力？若有具體專案作品請分享給我們。</h3>
             <p>
-                <b>自主學習｜<b/>自主學習的部分目前透過彭彭老師的YouTube 影片學習前端基礎並搭配W3school學習（HTML、CSS、JavaScript ）初步網頁切版。<br/>
-                  <b>訊息來源｜<b/>在任職資訊公司時結交了一些前、後端的工程師，並向他們尋求自身如何提高能力，並可以朝向哪一個方向進行學習。<br/>
-                  <b>初步能力｜<b/>在求職網頁設計師時有自行使用 Webflow 網站建立簡易網站 <a style="color:red; font-weight=bold;" href="https://chi-chens-portfolio.webflow.io/">點我看網頁</a>
+                <b>自主學習｜</b>自主學習的部分目前透過彭彭老師的YouTube 影片學習前端基礎並搭配W3school學習（HTML、CSS、JavaScript ）初步網頁切版。<br/>
+                  <b>訊息來源｜</b>在任職資訊公司時結交了一些前、後端的工程師，並向他們尋求自身如何提高能力，並可以朝向哪一個方向進行學習。<br/>
+                  <b>初步能力｜</b>在求職網頁設計師時有自行使用 Webflow 網站建立簡易網站 <a style="color:red; font-weight=bold;" href="https://chi-chens-portfolio.webflow.io/">點我看網頁</a>
             </p>
         </div>
          
