--- a/intro.html
+++ b/intro.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="intro.css">
   </head>
   
-  <body>
+  <body class="img_bd">
     <div class="frame">
       <div class="content-box">
         <h1> WeHelp 第四屆申請表 </h1>
