--- a/intro.html
+++ b/intro.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" type="text/css" href="intro.css">
   </head>
   
-  <body class="img_bd">
-    <div class="frame">
+  <body>
+    <div class="frame img_bg">
       <div class="content-box">
         <h1> WeHelp 第四屆申請表 </h1>
             <h3>個人簡介</h3>
