--- a/intro.html
+++ b/intro.html
@@ -7,8 +7,8 @@
   </head>
   
   <body>
-    <div class="frame bg-set">
-      <img class="img-bg" src="CD57693E-8811-4B98-B182-942CB1FC3975_1_105_c.jpeg" alt="bg_img_coffee">
+    <div class="frame .cross-fade-image">
+      <!--<img class="img-bg" src="CD57693E-8811-4B98-B182-942CB1FC3975_1_105_c.jpeg" alt="bg_img_coffee">-->
       <div class="content-box">
         <h1> WeHelp 第四屆申請表 </h1>
             <h3>個人簡介</h3>
