--- a/intro.html
+++ b/intro.html
@@ -7,7 +7,7 @@
   </head>
   
   <body>
-    <div class="frame,  cross-fade-image">
+    <div class="frame">
       <!--<img class="img-bg" src="CD57693E-8811-4B98-B182-942CB1FC3975_1_105_c.jpeg" alt="bg_img_coffee">-->
       <div class="content-box">
         <h1> WeHelp 第四屆申請表 </h1>
