--- a/intro.html
+++ b/intro.html
@@ -8,7 +8,7 @@
   
   <body>
     <div class="frame">
-      <img class="bg-coffee" src="coffee.png" alt="bg_img_coffee">
+     <!-- <img class="bg-coffee" src="coffee.png" alt="bg_img_coffee">-->
       <div class="content-box">
         <h1> WeHelp 第四屆申請表 </h1>
             <h3>個人簡介</h3>
