--- a/intro.html
+++ b/intro.html
@@ -42,7 +42,7 @@
             <hr>
             <h3>如果參與這個計畫，會怎麼安排學習時間？</h3>
             <p>
-                目前仍在職，確定自己有幸可以參與課程後會全心投入專職學習。
+                目前仍在職，自己有幸可以參與課程後會全心投入專職學習。
                 
                 <h4>第一階段｜</h4>
                 8週的學習過程會搭配既有的學習資源奠定自己的基礎（HTML、CSS...等）。透過反覆練習實作來讓自己記憶基礎的 Code 撰寫加深個人印象。
@@ -95,8 +95,7 @@
             <hr>
             <h3>其他想要對我們說的事情？</h3>
             <p>
-               很謝謝彭彭老師在Youotube開課程並建立Wehelp的活動。很謝謝花時間閱讀這些資訊的各位老師以及助教～
-              (P.S. 很抱歉第一次送出申請時沒有將 GitHub 的Url附上，所以重新填寫了一次。謝謝大家)
+               很謝謝彭彭老師在Youotube開課程並建立Wehelp的活動，很謝謝花時間閱讀這些資訊的各位老師以及助教。
             </p>
           </div>
       </div>
