--- a/intro.html
+++ b/intro.html
@@ -116,6 +116,7 @@
                     secondDiv.style.display="none";
                     thirdDiv.style.display="none";
                     titleOne.style.backgroundColor="antiquewhite";
+                    titleOne.className="text";
                     titleTwo.style.backgroundColor="white";
                     titleThree.style.backgroundColor="white";
                 };
@@ -135,6 +136,7 @@
                     thirdDiv.style.display="none";
                     titleOne.style.backgroundColor="white";
                     titleTwo.style.backgroundColor="antiquewhite";
+                    titleTwo.className="text";
                     titleThree.style.backgroundColor="white";
                 };
 
@@ -154,6 +156,7 @@
                     titleOne.style.backgroundColor="white";
                     titleTwo.style.backgroundColor="white";
                     titleThree.style.backgroundColor="antiquewhite";
+                    titleThree.className="text";
                 };
 
                
