--- a/intro.html
+++ b/intro.html
@@ -47,7 +47,7 @@
                 <span id="titleTwo" class="tag" onclick="changeToTwo()">第二階段</span>
                 <span id="titleThree" class="tag"  onclick="changeToThree()">第三階段</span>
               </div>
-              <div style="border-top:solid 1px gray; height=16px;"><div>
+              <div style="border-top:solid 1px gray; margin-motom=10px;"><div>
                 <div id="first">8週的學習過程會搭配既有的學習資源奠定自己的基礎（HTML、CSS...等）。透過反覆練習實作來讓自己記憶基礎的 Code 撰寫加深個人印象。 維持紀錄習慣，注意自身學習狀態，並從中改善調整。</div>
                 <div id="second" style="display: none;">從收到任務後訂定自身每日達成目標。並加強資訊類別觀念學習，加深印象反覆練習。學習紀錄並優化（例：開發過程的時間是否可以更快速及開發內容更穩定。</div>
                 <div id="third" style="display: none;">將學習資訊,透過一連串任務指引並自己進行串接，努力獨立開發專案，記錄學習記錄並發表成果。未來到職場不會有那麼多學習時間，自主學習並精進自己才能更有效的達到自我期望的目標</div>
