--- a/intro.html
+++ b/intro.html
@@ -53,6 +53,7 @@
                 <div id="third" style="display: none;">將學習資訊,透過一連串任務指引並自己進行串接，努力獨立開發專案，記錄學習記錄並發表成果。未來到職場不會有那麼多學習時間，自主學習並精進自己才能更有效的達到自我期望的目標</div>
              </div>
           </div>
+           </div>
           
           <div class="content-box">
             <hr>
