--- a/macyhuang.html
+++ b/macyhuang.html
@@ -51,9 +51,9 @@
             <h6>學習中</h6>
             <p>
                 <ul>
-                    <li>基礎  HTML 與 css </li>
-                    <li>基礎 JavaScript (ES6+</li>
-                    <li>saas</li>    
+                    <li>基礎  HTML -- W3school ：依照課程順序目前上課至單元（HTML <picture> Element） </li>
+                    <li>基礎  Css -- W3school ：依照課程順序目前上課至單元（ Css How To Add CSS） </li>
+                    <li>基礎 JavaScript -- W3school ：依照課程順序目前上課至單元（JavaScript Data Types(ES6+）)</li>  
                 </ul>
             </p>
         </div>
