--- a/macyhuang.html
+++ b/macyhuang.html
@@ -9,7 +9,7 @@
     
     <body>
         <div class="content-box">
-            <img class="avatar-set" class="center-item" url="Avatar.png" >
+            <img class="avatar-set" class="center-item" src="Avatar.png" >
             <div class="detail">
                 <span class="name">黃祈禎</span><span class="name">Chi-Chen Huang</span>
             </div>
