--- a/macyhuang.html
+++ b/macyhuang.html
@@ -54,6 +54,8 @@
                     <li>基礎  HTML -- W3school ：依照課程順序目前上課至單元（HTML <picture> Element） </li>
                     <li>基礎  Css -- W3school ：依照課程順序目前上課至單元（ Css How To Add CSS） </li>
                     <li>基礎 JavaScript -- W3school ：依照課程順序目前上課至單元（JavaScript Data Types(ES6+）)</li>  
+                    
+                    <li>影音學習 JavaScript -- 彭彭的課程 ：依照課程順序目前上課至單元（JavaScript 前端工程師33-24(JavaScript Event Handling 事件處理 - Front End 網頁前端工程教學))</li>  
                 </ul>
             </p>
         </div>
