--- a/macyhuang.html
+++ b/macyhuang.html
@@ -14,7 +14,7 @@
                 <span class="name">黃祈禎</span><span class="name">Chi-Chen Huang</span>
             </div>
             <div class="detail">
-                行動是知識特有的果實，想品嚐先捲起袖子
+                行動是知識特有的果實，想品嚐請先捲起袖子付諸行動
             </div>
             <div class="detail">
                 <span>1992.12.15  |</span>
@@ -26,7 +26,7 @@
         <div class="content-box">
             <h4 class="center-item">—— 自我介紹 ——</h4>
             <p>
-                我是一位設計師，從事設計相關工作經驗7年。公司在2019年時因想加強網路上的推廣，因而有機會學習套版網站的網頁設計。學習過程中發現網頁套版樣式與實際在設計時想呈現的畫面截然不同，為了符合版型只能修改設，因為技術的資訊缺乏在學習中透過網路資源認識前端工程師的職業與職務內容，在30歲時決定在2023年開始我的轉職規劃。規劃七月初將全心投入前端工程師的學習。
+                我是一位設計師，從事設計相關工作經驗7年。再一次偶然的機會公司因想開發網路用戶推廣，因而有機會學習套版網站的UI&UX網頁設計及網站架設。學習過程中發現網頁套版樣式與實際在設計時想呈現的畫面截然不同，為了符合版型只能修改設，因為技術的資訊缺乏在學習中透過網路資源認識前端工程師的職業與職務內容，在30歲時決定在2023年開始我的轉職規劃。規劃七月初將全心投入前端工程師的學習。
             </p>
         </div>
 
